--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/jpeg" href="/edubot-logo.jpeg" />
+  <link rel="icon" type="image/jpeg" href="/edubot-logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Edubot Learning</title>
   <meta name="description"
